ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.5
    • Affects Version/s: None
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 13 (04/22/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      src/mongo/s/client/shard_factory_impl.cpp:46:55: error: moving a temporary object prevents copy elision [-Werror,-Wpessimizing-move]
          return stdx::make_unique<Shard>(shardId, connStr, std::move(_targeterFactory.create(connStr)));
                                                            ^
      src/mongo/s/client/shard_factory_impl.cpp:46:55: note: remove std::move call here
          return stdx::make_unique<Shard>(shardId, connStr, std::move(_targeterFactory.create(connStr)));
                                                            ^~~~~~~~~~                                ~
      src/mongo/s/client/shard_factory_impl.cpp:52:54: error: moving a temporary object prevents copy elision [-Werror,-Wpessimizing-move]
          return std::make_shared<Shard>(shardId, connStr, std::move(_targeterFactory.create(connStr)));
                                                           ^
      src/mongo/s/client/shard_factory_impl.cpp:52:54: note: remove std::move call here
          return std::make_shared<Shard>(shardId, connStr, std::move(_targeterFactory.create(connStr)));
                                                           ^~~~~~~~~~                                ~
      Compiling build/opt/mongo/s/catalog/replset/catalog_manager_replica_set.os
      2 errors generated.
      

            Assignee:
            Misha Tyulenev (Inactive)
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: