SERVER-23727 pessimizing std::move